Annotations don't work with 2.79 settings #63427

Closed
opened 2019-04-09 17:11:55 +02:00 by ChristopherAnderssarian · 9 comments

System Information
Operating system: Microsoft Windows 7
GPU: ASUS Strix Radeon Vega 64
CPU: Intel(R) Core(TM) i7-5960X
RAM: 32.0 GB
Full System Information: Here

Blender Version

Broken: 2.79b > 2.80, blender-2.80.0-git.2a79e3463130-windows64
Worked: 2.69 > 2.79b

Short description of error

Settings from 2.79 are kept as is, when opening in 2.80, but are not editable with the UI being striped down.

This is a problem when layers are locked or opacity is zero etc...

Exact steps for others to reproduce the error

2.79.PNG 2.80.PNG

GPencil (Annotations).blend

**System Information** Operating system: Microsoft Windows 7 GPU: ASUS Strix Radeon Vega 64 CPU: Intel(R) Core(TM) i7-5960X RAM: 32.0 GB Full System Information: [Here ](https://developer.blender.org/p/Christopher_Anderssarian/) **Blender Version** Broken: 2.79b > 2.80, `blender-2.80.0-git.2a79e3463130-windows64` Worked: 2.69 > 2.79b **Short description of error** Settings from 2.79 are kept as is, when opening in 2.80, but are not editable with the UI being striped down. This is a problem when layers are locked or opacity is zero etc... **Exact steps for others to reproduce the error** |![2.79.PNG](https://archive.blender.org/developer/F6922685/2.79.PNG) | ![2.80.PNG](https://archive.blender.org/developer/F6922687/2.80.PNG) | | -- | -- | [GPencil (Annotations).blend](https://archive.blender.org/developer/F6922691/GPencil__Annotations_.blend)
Antonio Vazquez was assigned by ChristopherAnderssarian 2019-04-09 17:11:55 +02:00

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

I pressed enter by accident...

I pressed enter by accident...

I really don't understand this bug report. Could you provide more details, a test file and the steps to reproduce it.

I really don't understand this bug report. Could you provide more details, a test file and the steps to reproduce it.

@antoniov Yeah, I pressed Enter after writing the title which submitted the report before I had filled it in.

@antoniov Yeah, I pressed Enter after writing the title which submitted the report before I had filled it in.

This issue was referenced by 009dbc2bc9

This issue was referenced by 009dbc2bc9fbd45f974b46835679fefae7b42561

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Oh wow, I was not expecting the colour to be fixed, I assumed the new layers to be incompatible with the old GPencil colour pallet, but taking the last colour from the pallet seems like a excellent compromise considering only one colour per layer is allowed in 2.80. I originally made the blend file for the colour issue, but I'd thought it would be a limitation.

The actual issue that I'm trying to report is (for example) that GPencil layers can be locked in 2.79 and when opened is 2.80 are uneditable.

This is also true with opacity:

Full_Image_.PNG 2.79.PNG 2.80.PNG
Original GPencil Image 2.79 with yellow at 0% opacity 2.80 with yellow at 0% opacity that can't be changed

From what I can see this only affects: Opacity and Lock layers.

Oh wow, I was not expecting the colour to be fixed, I assumed the new layers to be incompatible with the old GPencil colour pallet, but taking the last colour from the pallet seems like a excellent compromise considering only one colour per layer is allowed in 2.80. I originally made the blend file for the colour issue, but I'd thought it would be a limitation. The actual issue that I'm trying to report is (for example) that GPencil layers can be locked in 2.79 and when opened is 2.80 are uneditable. This is also true with opacity: | ![Full_Image_.PNG](https://archive.blender.org/developer/F6926860/Full_Image_.PNG) |![2.79.PNG](https://archive.blender.org/developer/F6922685/2.79.PNG) | ![2.80.PNG](https://archive.blender.org/developer/F6922687/2.80.PNG) | | -- | -- | -- | | Original GPencil Image | 2.79 with yellow at 0% opacity | 2.80 with yellow at 0% opacity that can't be changed | From what I can see this only affects: Opacity and Lock layers.

@ChristopherAnderssarian Could you open a new report for the lock problem. It's better to have one bug by report.

@ChristopherAnderssarian Could you open a new report for the lock problem. It's better to have one bug by report.

Sure thing!

Sure thing!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63427
No description provided.